manifests/k8s-access/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-multitool
  template:
    metadata:
      labels:
        app: nginx-multitool
    spec:
      containers:
        - name: nginx
          image: nginx:1.27
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html

        - name: multitool
          image: wbitt/network-multitool
          ports:
            - containerPort: 8080

      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
